edition = "2023";  // successor to proto2 and proto3

package v1;

import "api/v1/common.proto";
import "api/v1/search_service.proto";
import weak "google/api/annotations.proto";
import "storage/namespace_metadata.proto";
import "google/protobuf/go_features.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";
option features.(pb.go).api_level = API_OPAQUE;

message Namespace {
  storage.NamespaceMetadata metadata = 1 [lazy = true];
  int32 num_deployments = 2;
  int32 num_secrets = 3;
  int32 num_network_policies = 4;
}

message GetNamespacesResponse {
  repeated Namespace namespaces = 1 [lazy = true];
}

message GetNamespaceRequest {
  RawQuery query = 1;
}

service NamespaceService {
  rpc GetNamespaces(GetNamespaceRequest) returns (GetNamespacesResponse) {
    option (google.api.http) = {get: "/v1/namespaces"};
  }

  rpc GetNamespace(ResourceByID) returns (Namespace) {
    option (google.api.http) = {get: "/v1/namespaces/{id}"};
  }
}
